--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,24 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo List</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <h1>
-        <%= day %>
-    </h1>
-    <ul>
-        <% for(let i = 0; i < items.length; i++) { %>
-            <li>
-                <%= items[i] %>
-            </li>
-            <% } %>
-    </ul>
+    <div class="box" id="heading">
+        <h1>
+            <%= day %>
+        </h1>
+    </div>
 
-    <form action="/" method="post">
-        <input type="text" placeholder="Enter new ToDo" name="newToDo">
-        <button type="submit">Submit</button>
-    </form>
+    <div class="box" id="">
+        <% for(let i = 0; i < items.length; i++) { %>
+            <div class="item">
+                <input type="checkbox">
+                <p>
+                    <%= items[i] %>
+                </p>
+            </div>
+            <% } %>
+                <form action="/" method="post" class="item">
+                    <input type="text" placeholder="Enter new ToDo" name="newToDo">
+                    <button type="submit">+</button>
+                </form>
+    </div>
+
+
 </body>
 
 </html>
