--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,18 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('header') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo List</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-
-<body>
     <div class="box" id="heading">
         <h1>
-            <%= day %>
+            <%= listTitle %>
         </h1>
     </div>
 
@@ -27,11 +17,8 @@
             <% } %>
                 <form action="/" method="post" class="item">
                     <input type="text" placeholder="Enter new ToDo" name="newToDo">
-                    <button type="submit">+</button>
+                    <button type="submit" value="<%= listTitle %>" name="submitButton">+</button>
                 </form>
     </div>
 
-
-</body>
-
-</html>
+    <%- include('footer') %>
